fix: fix collapsed menu theme button placement

--- a/src/_sass/custom/custom.scss
+++ b/src/_sass/custom/custom.scss
@@ -135,17 +135,20 @@
     background-color: $note-bg-color;
   }
 }
-#theme-toggle {
-  width: $sp-8;
-  height: $sp-8;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-self: center;
-  margin-right: $sp-1;
-}
-// @media (min-width: $value) {
-//   #theme-toggle {
-//     width: ;
-//   }
+// #theme-toggle {
+//   // width: $sp-8;
+//   // height: $sp-8;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   align-self: center;
+//   margin-right: $sp-2;
+
 // }
+
+#theme-toggle {
+  margin-left: auto;
+  @include mq(lg) {
+    margin-left: unset;
+  }
+}
